force-app/main/default/objects/Personality__c/Personality__c.object-meta.xml
<CustomObject>
    <label>Personality</label>
    <nameField>
        <label>Personality Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personalities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>