force-app/main/default/objects/Personality__c/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <label>Imagen</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>